Remove chrono from TDS decode path, make it optional
- Replace all chrono usage in decode_direct.rs with pure integer arithmetic
- datetime2_to_micros now uses CE_TO_UNIX_DAYS constant instead of chrono
- Legacy datetime/smalldatetime decode uses SQL_TO_UNIX_DAYS constant
- write_sqlvalue_into fallback also uses pure integer math
- Make chrono an optional dependency (dep:chrono behind 'chrono' feature)
- Fix write_date trait doc: days are since Unix epoch, not CE epoch
- Fix SqlValueWriter::write_date to convert unix days back to CE days

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ tokio-util = { version = "0.7", features = ["compat"] }
 tokio-rustls = "0.26"
 rustls = "0.23"
 once_cell = "1"
-chrono = { version = "0.4", default-features = false }
+chrono = { version = "0.4", default-features = false, optional = true }
 uuid = { version = "1", features = ["v4"] }
 futures-util = { version = "0.3", default-features = false, features = ["io", "sink"] }
 rust_decimal = "1"
@@ -44,7 +44,7 @@ winauth = []
 docs = []
 bigdecimal = []
 rust_decimal = []
-chrono = []
+chrono = ["dep:chrono"]
 time = []
 
 [dev-dependencies]
