--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,9 @@ description = "Pure Rust TDS 7.4+ protocol library for Microsoft SQL Server"
 license = "MIT"
 repository = "https://github.com/copycatdb/tabby"
 readme = "README.md"
-keywords = ["sql-server", "tds", "database", "mssql", "async"]
-categories = ["database"]
+documentation = "https://docs.rs/tabby"
+keywords = ["sql-server", "tds", "database", "mssql", "protocol"]
+categories = ["database", "network-programming"]
 
 [dependencies]
 tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "sync", "macros"] }
